# backwell-api

./: .gitignore  README.md  docker-compose.yml  test.py  test.txt
backend/: Detalle de Planta Docente y Horarios 19-6 FI.xlsx  Dockerfile  Schedule.xlsx  entrypoint.sh  requirements.txt
backend/BackWell/: asgi.py  settings.py  wsgi.py
backend/app/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_curso_grupo_academico_curso_id_administrador_curso_and_more.py  0003_alter_curso_ciclo_alter_curso_id_del_curso_and_more.py  0004_remove_curso_rol_profesor_remove_schedule_profesor_and_more.py  0005_remove_curso_adjunto_curso_rol_profesor_and_more.py  0006_remove_curso_rol_profesor_remove_schedule_profesor_and_more.py
backwellApi/: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml  entrypoint.sh
backwellApi/migrations/2024-10-17-225409_create_tables/: down.sql  up.sql
backwellApi/src/: main.rs  models.rs  schedule_utils.rs  schema.rs
backwellApi/src/handlers/: class_loader_handlers.rs  mod.rs  schedule_generator_handlers.rs  user_handlers.rs
backwellApi/src/models/: course.rs  mod.rs  professor.rs  room.rs  schedule.rs  user.rs
backwellApi/src/routes/: class_loader_routes.rs  mod.rs  schedule_generator_routes.rs  user_routes.rs
backwellApi/src/utils/: auth.rs  auth_middleware.rs  class_loader_utils.rs  mod.rs  schedule_generator_utils.rs
backwellC/backend/: manage.py  ~$Schedule.xlsx
backwellC/backend/app/: admin.py  (+4 more)
backwellC/backwellApi/: Cargo.toml  Dockerfile  thunder-collection.json
backwellC/backwellApi/src/: main.rs  schedule_utils.rs
(+3 files in other folders)
