[package]
name = "backwellApi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
bcrypt = "0.13.0"  # Para hashing de contraseñas
chrono = { version = "0.4", features = ["serde"] }  # Para manejar fechas y horas
uuid = { version = "1", features = ["serde", "v4"] }  # Para UUIDs
