[package]
name = "backwellApi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"          # Updated to latest stable version
actix-multipart = "0.7.2"    # Updated to latest version
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.26.1"
petgraph = "0.6.0"
futures = "0.3"
uuid = { version = "1.3", features = ["serde", "v4"] }
tempfile = "3.13.0"
