[package]
name = "backwellApi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.30", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.27", features = ["serde"] }
petgraph = "0.6.5"
env_logger = "0.9"
log = "0.4"
url = "2.2.2"